5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1635_2704.log
== TEST (2019-04-08 13:06:59) 
-- CODE:
nota=float(input("Nota do aluno:"))
bonificacao=input("Bonificacao? (S/N)")
if(bonificacao.upper()=="S")
   total= nota + (nota*1/10)
else:
	total=nota
print(total)	
	
-- ERROR:
File "XXXX", line 3
    if(bonificacao.upper()=="S")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:07:39) 
-- CODE:
nota=float(input("Nota do aluno:"))
bonificacao=input("Bonificacao? (S/N)")
if(bonificacao=="S")
   total= nota + (nota*1/10)
else:
	total=nota
print(total)	
	
-- ERROR:
File "XXXX", line 3
    if(bonificacao=="S")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:07:54) 
-- CODE:
nota=float(input("Nota do aluno:"))
bonificacao=input("Bonificacao? (S/N)")
if(bonificacao.upper()=="S"):
   total= nota + (nota*1/10)
else:
	total=nota
print(total)	
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:08:09) 
-- CODE:
nota=float(input("Nota do aluno:"))
bonificacao=input("Bonificacao? (S/N)")
if(bonificacao.upper()=="S"):
   total= nota + (nota*1/10)
else:
	total=nota
print(total)	
	
-- EXECUTION TIME:
0.127969
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
